feat: use S3-compatible storage for PDF files and update API

--- a/apps/api/Cargo.toml
+++ b/apps/api/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "crates/sheets/core",
     "crates/sheets/adapters/web",
     "crates/sheets/adapters/storage",
+    "crates/sheets/adapters/s3",
     "crates/sheets/adapters/db",
     "crates/sheets/adapters/pdf",
     "crates/actions/core",
@@ -42,6 +43,8 @@ utoipa = { version = "5", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
 utoipa-actix-web = "0.1"
 validator = { version = "0.20", features = ["derive"] }
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-s3 = "1.120.0"
 
 [package]
 name = "form-forge-api"
@@ -59,6 +62,7 @@ common = { path = "crates/common" }
 sheets_core = { path = "crates/sheets/core" }
 sheets_web = { path = "crates/sheets/adapters/web" }
 sheets_storage = { path = "crates/sheets/adapters/storage" }
+sheets_s3 = { path = "crates/sheets/adapters/s3" }
 sheets_db = { path = "crates/sheets/adapters/db" }
 sheets_pdf = { path = "crates/sheets/adapters/pdf" }
 actions_core = { path = "crates/actions/core" }
