--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,16 @@ DB_PORT=5434
 BIND_ADDR=0.0.0.0:8081
 RUST_LOG=info
 
+# S3-Compatible Storage (RustFS)
+S3_ENDPOINT=http://localhost:9000
+S3_BUCKET=form-forge
+S3_ACCESS_KEY=rustfsadmin
+S3_SECRET_KEY=rustfsadmin
+S3_REGION=us-east-1
+
+# Production only - public URL for pre-signed download URLs
+# For single-domain setup with /s3/ path: https://yourdomain.com/s3
+# S3_PUBLIC_ENDPOINT=https://yourdomain.com/s3
+
 # Frontend Configuration
 API_URL=http://localhost:8081
