--- a/.github/workflows/verify-openapi.yml
+++ b/.github/workflows/verify-openapi.yml
@@ -7,6 +7,10 @@ on:
       - 'packages/api-spec/**'
       - '.github/workflows/verify-openapi.yml'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   verify-api-types:
     runs-on: ubuntu-latest
@@ -36,8 +40,6 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 9
 
       - name: Setup Node.js
         uses: actions/setup-node@v6
