--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,14 @@ S3_REGION=us-east-1
 # For single-domain setup with /s3/ path: https://yourdomain.com/s3
 # S3_PUBLIC_ENDPOINT=https://yourdomain.com/s3
 
+# Document TTL Configuration
+# Number of days before uploaded documents expire (default: 7)
+# This configures the background reconciliation task; lifecycle rules
+# are configured separately in config/lifecycle.json
+S3_LIFECYCLE_EXPIRATION_DAYS=1
+
+# Webhook secret for S3 event notifications (optional, production only)
+# S3_WEBHOOK_SECRET=your-secret-here
+
 # Frontend Configuration
 API_URL=http://localhost:8081
