--- a/apps/api/crates/sheets/adapters/db/Cargo.toml
+++ b/apps/api/crates/sheets/adapters/db/Cargo.toml
@@ -8,5 +8,6 @@ license = "MIT OR Apache-2.0"
 sheets_core = { path = "../../core" }
 actions_core = { path = "../../../actions/core" }
 async-trait.workspace = true
-sqlx.workspace = true
+sqlx = { workspace = true, features = ["chrono"] }
 tracing.workspace = true
+chrono = { version = "0.4", features = ["serde"] }
