--- a/apps/api/crates/sheets/core/Cargo.toml
+++ b/apps/api/crates/sheets/core/Cargo.toml
@@ -10,6 +10,7 @@ thiserror.workspace = true
 anyhow.workspace = true
 uuid.workspace = true
 tracing.workspace = true
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 mockall.workspace = true
