feat: explicitly deny public access to internal routes
Was not accessible anyway, but would route to frontend and fail.

--- a/docker/nginx.prod.conf
+++ b/docker/nginx.prod.conf
@@ -78,6 +78,12 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Block internal endpoints from external access
+        # These are only accessible within the Docker network
+        location /internal {
+            return 403;
+        }
+
         # Frontend (catch-all)
         location / {
             proxy_pass http://frontend:3000;
