--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -112,7 +112,9 @@ services:
       start_period: 10s
 
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./docker
+      dockerfile: nginx.Dockerfile
     restart: unless-stopped
     depends_on:
       - frontend
@@ -120,8 +122,6 @@ services:
       - rustfs
     ports:
       - "${HTTP_PORT:-80}:80"
-    volumes:
-      - ./docker/nginx.prod.conf:/etc/nginx/nginx.conf:ro
 
 volumes:
   db_data:
