--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -120,8 +120,8 @@ services:
       - frontend
       - backend
       - rustfs
-    ports:
-      - "${HTTP_PORT:-80}:80"
+    expose:
+      - "80"
 
 volumes:
   db_data:
