feat(backend): add OpenTelemetry support for traces and metrics

--- a/.env.example
+++ b/.env.example
@@ -31,5 +31,10 @@ S3_REGION=us-east-1
 # are configured separately in config/lifecycle.json
 S3_LIFECYCLE_EXPIRATION_DAYS=1
 
+# OpenTelemetry Configuration (optional)
+# Set OTEL_EXPORTER_OTLP_ENDPOINT to enable tracing and metrics export
+# OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+# OTEL_SERVICE_NAME=form-forge-api
+
 # Frontend Configuration
 API_URL=http://localhost:8081
