--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -20,10 +20,9 @@ services:
     image: rustfs/rustfs:latest
     restart: unless-stopped
     environment:
-      RUSTFS_ROOT_USER: ${S3_ACCESS_KEY:?S3_ACCESS_KEY is required}
-      RUSTFS_ROOT_PASSWORD: ${S3_SECRET_KEY:?S3_SECRET_KEY is required}
+      RUSTFS_ACCESS_KEY: ${S3_ACCESS_KEY:?S3_ACCESS_KEY is required}
+      RUSTFS_SECRET_KEY: ${S3_SECRET_KEY:?S3_SECRET_KEY is required}
       RUSTFS_CONSOLE_ENABLE: ${S3_CONSOLE_ENABLE:-false}
-      RUSTFS_SERVER_DOMAINS: ${S3_SERVER_DOMAINS:?S3_SERVER_DOMAINS is required}
       RUSTFS_VOLUMES: /data/rustfs0
       # Webhook notification for object deletions (lifecycle expiration)
       # Uses MinIO-compatible environment variable naming
@@ -45,21 +44,18 @@ services:
         condition: service_healthy
     restart: "no"
     environment:
-      RUSTFS_ROOT_USER: ${S3_ACCESS_KEY:?S3_ACCESS_KEY is required}
-      RUSTFS_ROOT_PASSWORD: ${S3_SECRET_KEY:?S3_SECRET_KEY is required}
-      RUSTFS_ACCESS_KEY: ${S3_ACCESS_KEY:?S3_ACCESS_KEY is required}
-      RUSTFS_SECRET_KEY: ${S3_SECRET_KEY:?S3_SECRET_KEY is required}
+      S3_ACCESS_KEY: ${S3_ACCESS_KEY:?S3_ACCESS_KEY is required}
+      S3_SECRET_KEY: ${S3_SECRET_KEY:?S3_SECRET_KEY is required}
+      S3_REGION: ${S3_REGION:-eu-central}
       S3_BUCKET: ${S3_BUCKET:-form-forge}
-    volumes:
-      - ./config/lifecycle.json:/lifecycle.json:ro
     entrypoint: /bin/sh
     command:
       - -c
       - |
         /usr/bin/mc alias set rustfs http://rustfs:9000 "$${S3_ACCESS_KEY}" "$${S3_SECRET_KEY}"
         /usr/bin/mc mb --ignore-existing rustfs/$${S3_BUCKET}
-        /usr/bin/mc ilm import rustfs/$${S3_BUCKET} < /lifecycle.json
-        /usr/bin/mc event add rustfs/$${S3_BUCKET} arn:minio:sqs::primary:webhook --event delete || true
+        echo '{"Rules":[{"ID":"expire-sheets-1-days","Status":"Enabled","Filter":{"Prefix":"sheets/"},"Expiration":{"Days":1}}]}' | /usr/bin/mc ilm import rustfs/$${S3_BUCKET}
+        /usr/bin/mc event add rustfs/$${S3_BUCKET} arn:rustfs:sqs:"$${S3_REGION}":primary:webhook --event delete || true
         echo "Bucket '$${S3_BUCKET}' initialized with lifecycle rules and webhook events"
 
   backend:
@@ -86,13 +82,19 @@ services:
       S3_BUCKET: ${S3_BUCKET:-form-forge}
       S3_ACCESS_KEY: ${S3_ACCESS_KEY}
       S3_SECRET_KEY: ${S3_SECRET_KEY}
-      S3_REGION: ${S3_REGION:-us-east-1}
+      S3_REGION: ${S3_REGION:-eu-central}
+      # OpenTelemetry configuration (optional - set OTEL_EXPORTER_OTLP_ENDPOINT to enable)
+      OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT:-}
+      OTEL_SERVICE_NAME: ${OTEL_SERVICE_NAME:-form-forge-api}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8081/health"]
       interval: 30s
       timeout: 3s
       retries: 3
       start_period: 5s
+    networks:
+      - default
+      - monitoring
 
   frontend:
     build:
@@ -126,6 +128,11 @@ services:
       - rustfs
     expose:
       - "80"
+
+networks:
+  monitoring:
+    external: true
+    name: monitoring
 
 volumes:
   db_data:
