--- a/apps/api/crates/common/Cargo.toml
+++ b/apps/api/crates/common/Cargo.toml
@@ -14,9 +14,10 @@ utoipa.workspace = true
 lopdf.workspace = true
 
 # OpenTelemetry dependencies (optional, for production tracing)
-opentelemetry = { version = "0.27", features = ["metrics"], optional = true }
-opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"], optional = true }
-opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "metrics"], optional = true }
+opentelemetry = { version = "0.27", features = ["metrics", "logs"], optional = true }
+opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics", "logs"], optional = true }
+opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "metrics", "logs"], optional = true }
+opentelemetry-appender-tracing = { version = "0.27", optional = true }
 tracing-opentelemetry = { version = "0.28", optional = true }
 
 [dev-dependencies]
@@ -26,4 +27,4 @@ pretty_assertions.workspace = true
 default = ["pretty-logs"]   # dev default
 pretty-logs = []
 json-logs = []
-otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
+otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-appender-tracing", "dep:tracing-opentelemetry"]
