fix: remove required-variable syntax from prod compose for Coolify compatibility
Coolify injects env vars at container runtime, not during Docker
Compose file parsing. The ${VAR:?} syntax fails at parse time before
vars are available.

--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -7,7 +7,7 @@ services:
     shm_size: 128mb
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB:-form-forge}
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-form-forge}"]
@@ -20,8 +20,8 @@ services:
     image: rustfs/rustfs:latest
     restart: unless-stopped
     environment:
-      RUSTFS_ACCESS_KEY: ${S3_ACCESS_KEY:?S3_ACCESS_KEY is required}
-      RUSTFS_SECRET_KEY: ${S3_SECRET_KEY:?S3_SECRET_KEY is required}
+      RUSTFS_ACCESS_KEY: ${S3_ACCESS_KEY}
+      RUSTFS_SECRET_KEY: ${S3_SECRET_KEY}
       RUSTFS_CONSOLE_ENABLE: ${S3_CONSOLE_ENABLE:-false}
       RUSTFS_VOLUMES: /data/rustfs0
       # Webhook notification for object deletions (lifecycle expiration)
@@ -45,8 +45,8 @@ services:
         condition: service_healthy
     restart: "no"
     environment:
-      S3_ACCESS_KEY: ${S3_ACCESS_KEY:?S3_ACCESS_KEY is required}
-      S3_SECRET_KEY: ${S3_SECRET_KEY:?S3_SECRET_KEY is required}
+      S3_ACCESS_KEY: ${S3_ACCESS_KEY}
+      S3_SECRET_KEY: ${S3_SECRET_KEY}
       S3_REGION: ${S3_REGION:-eu-central}
       S3_BUCKET: ${S3_BUCKET:-form-forge}
     entrypoint: /bin/sh
@@ -80,7 +80,7 @@ services:
       BIND_ADDR: 0.0.0.0:8081
       RUST_LOG: ${RUST_LOG:-info}
       S3_ENDPOINT: http://rustfs:9000
-      S3_PUBLIC_ENDPOINT: ${S3_PUBLIC_ENDPOINT:?S3_PUBLIC_ENDPOINT is required}
+      S3_PUBLIC_ENDPOINT: ${S3_PUBLIC_ENDPOINT}
       S3_BUCKET: ${S3_BUCKET:-form-forge}
       S3_ACCESS_KEY: ${S3_ACCESS_KEY}
       S3_SECRET_KEY: ${S3_SECRET_KEY}
