ci: add release-please workflow for automated releases

--- a/apps/api/Cargo.toml
+++ b/apps/api/Cargo.toml
@@ -13,6 +13,11 @@ members = [
 ]
 resolver = "2"
 
+[workspace.package]
+version = "0.1.0" # x-release-please-version
+edition = "2024"
+license = "MIT OR Apache-2.0"
+
 [workspace.dependencies]
 actix-web = "4"
 actix-multipart = "0.7"
@@ -46,9 +51,9 @@ aws-sdk-s3 = "1.120.0"
 
 [package]
 name = "form-forge-api"
-version = "0.1.0"
-edition = "2024"
-license = "MIT OR Apache-2.0"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 default-run = "form-forge-api"
 
 [[bin]]
