--- a/apps/api/crates/actions/adapters/pdf/Cargo.toml
+++ b/apps/api/crates/actions/adapters/pdf/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "actions_pdf"
-version = "0.1.0"
-edition = "2024"
-license = "MIT OR Apache-2.0"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 
 [dependencies]
 actions_core = { path = "../../core" }
