fix(backend): resolve S3 presigned URL SignatureDoesNotMatch behind reverse proxy
When S3_PUBLIC_ENDPOINT includes a path prefix (e.g. /s3/), the AWS
SDK signs the full path including the prefix, but the reverse proxy
strips it before forwarding to the storage backend, causing a
signature mismatch. Split the public endpoint into base URL (for
signing) and path prefix (re-inserted after signing) so the signature
covers only the path the backend actually sees.

--- a/apps/api/Cargo.toml
+++ b/apps/api/Cargo.toml
@@ -48,6 +48,7 @@ utoipa-actix-web = "0.1"
 validator = { version = "0.20", features = ["derive"] }
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.120.0"
+url = "2"
 
 [package]
 name = "form-forge-api"
