--- a/apps/api/crates/sheets/adapters/s3/Cargo.toml
+++ b/apps/api/crates/sheets/adapters/s3/Cargo.toml
@@ -14,3 +14,7 @@ tokio = { workspace = true, features = ["fs", "io-util"] }
 aws-config = { workspace = true }
 aws-sdk-s3 = { workspace = true }
 tempfile.workspace = true
+url.workspace = true
+
+[dev-dependencies]
+pretty_assertions.workspace = true
