--- a/docker/nginx.prod.conf
+++ b/docker/nginx.prod.conf
@@ -78,6 +78,24 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Friendly redirect to RustFS console
+        location = /s3-console {
+            return 301 /rustfs/console/;
+        }
+
+        # RustFS Console (S3 admin UI on port 9001)
+        location /rustfs/ {
+            proxy_pass http://rustfs:9001;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            # WebSocket support for live console updates
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
         # Block internal endpoints from external access
         # These are only accessible within the Docker network
         location /internal {
