ci: make security audit schedule cron job

--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -1,20 +1,8 @@
 name: Security Audit
 
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - '**/Cargo.toml'
-      - '**/Cargo.lock'
-  pull_request:
-    branches:
-      - main
-      - master
-      - develop
-    paths:
-      - '**/Cargo.toml'
-      - '**/Cargo.lock'
+  schedule:
+    - cron: '0 0 * * *'
 
 permissions:
   contents: read
