chore: fix S3 console proxy

--- a/docker/nginx.prod.conf
+++ b/docker/nginx.prod.conf
@@ -80,12 +80,12 @@ http {
 
         # Friendly redirect to RustFS console
         location = /s3-console {
-            return 301 /rustfs/console/;
+            return 301 /rustfs/;
         }
 
         # RustFS Console (S3 admin UI on port 9001)
         location /rustfs/ {
-            proxy_pass http://rustfs:9001;
+            proxy_pass http://rustfs:9001/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
