--- a/apps/api/crates/sheets/adapters/web/Cargo.toml
+++ b/apps/api/crates/sheets/adapters/web/Cargo.toml
@@ -5,8 +5,8 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-sheets_core = { path = "../../core" }
-common = { path = "../../../common" }
+sheets_core.workspace = true
+common.workspace = true
 actix-web.workspace = true
 actix-multipart.workspace = true
 uuid.workspace = true
