--- a/apps/api/Cargo.toml
+++ b/apps/api/Cargo.toml
@@ -1,55 +1,3 @@
-[workspace]
-members = [
-    ".",
-    "crates/common",
-    "crates/sheets/core",
-    "crates/sheets/adapters/web",
-    "crates/sheets/adapters/s3",
-    "crates/sheets/adapters/db",
-    "crates/sheets/adapters/pdf",
-    "crates/actions/core",
-    "crates/actions/adapters/web",
-    "crates/actions/adapters/pdf",
-]
-resolver = "2"
-
-[workspace.package]
-version = "0.1.0" # x-release-please-version
-edition = "2024"
-license = "MIT OR Apache-2.0"
-
-[workspace.dependencies]
-actix-web = "4"
-actix-multipart = "0.7"
-actix-cors = "0.7.1"
-tracing = "0.1"
-tracing-actix-web = "0.7"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
-anyhow = "1.0"
-thiserror = "2.0"
-uuid = { version = "1.18.1", features = ["v4", "serde"] }
-async-trait = "0.1"
-sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "migrate", "uuid", "macros"] }
-tempfile = "3.21"
-testcontainers = "0.26"
-testcontainers-modules = { version = "0.14", features = ["postgres", "minio", "blocking"] }
-rstest = "0.26"
-pretty_assertions = "1.4"
-dotenvy = "0.15"
-tokio = { version = "1.49", features = ["rt", "macros"] }
-mockall = "0.14"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-serde_yaml = "0.9"
-lopdf = "0.39"
-utoipa = { version = "5", features = ["actix_extras"] }
-utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
-utoipa-actix-web = "0.1"
-validator = { version = "0.20", features = ["derive"] }
-aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
-aws-sdk-s3 = "1.120.0"
-url = "2"
-
 [package]
 name = "form-forge-api"
 version.workspace = true
@@ -62,15 +10,16 @@ name = "generate-openapi"
 path = "src/bin/generate-openapi.rs"
 
 [dependencies]
-common = { path = "crates/common" }
-sheets_core = { path = "crates/sheets/core" }
-sheets_web = { path = "crates/sheets/adapters/web" }
-sheets_s3 = { path = "crates/sheets/adapters/s3" }
-sheets_db = { path = "crates/sheets/adapters/db" }
-sheets_pdf = { path = "crates/sheets/adapters/pdf" }
-actions_core = { path = "crates/actions/core" }
-actions_web = { path = "crates/actions/adapters/web" }
-actions_pdf = { path = "crates/actions/adapters/pdf" }
+common.workspace = true
+common_telemetry.workspace = true
+sheets_core.workspace = true
+sheets_web.workspace = true
+sheets_s3.workspace = true
+sheets_db.workspace = true
+sheets_pdf.workspace = true
+actions_core.workspace = true
+actions_web.workspace = true
+actions_pdf.workspace = true
 actix-web.workspace = true
 actix-cors.workspace = true
 tracing.workspace = true
@@ -87,6 +36,7 @@ serde_yaml.workspace = true
 tokio = { workspace = true, features = ["rt", "time"] }
 
 [dev-dependencies]
+common_pdf.workspace = true
 testcontainers.workspace = true
 testcontainers-modules.workspace = true
 rstest.workspace = true
