--- a/apps/api/crates/actions/adapters/web/Cargo.toml
+++ b/apps/api/crates/actions/adapters/web/Cargo.toml
@@ -5,8 +5,8 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-common = { path = "../../../common" }
-actions_core = { path = "../../core" }
+common.workspace = true
+actions_core.workspace = true
 actix-web.workspace = true
 serde.workspace = true
 uuid.workspace = true
