--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@repo/ui": "workspace:^",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.4",
