--- a/apps/native/src-tauri/Cargo.toml
+++ b/apps/native/src-tauri/Cargo.toml
@@ -1,26 +1,42 @@
 [package]
 name = "native"
-version = "0.1.0" # x-release-please-version
+version.workspace = true
 description = "A Tauri App"
 authors = ["you"]
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition.workspace = true
+license.workspace = true
 
 [lib]
-# The `_lib` suffix may seem redundant but it is necessary
-# to make the lib name unique and wouldn't conflict with the bin name.
-# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
 name = "native_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build.workspace = true
 
 [dependencies]
-tauri = { version = "2", features = [] }
-tauri-plugin-opener = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tauri-plugin-http = "2"
+# Shared domain crates
+sheets_core.workspace = true
+actions_core.workspace = true
+sheets_pdf.workspace = true
+actions_pdf.workspace = true
+common_telemetry.workspace = true
+common_pdf.workspace = true
 
+# Desktop adapters
+sheets_fs.workspace = true
+sheets_libsql.workspace = true
+
+# Tauri
+tauri.workspace = true
+tauri-plugin-opener.workspace = true
+tauri-plugin-dialog.workspace = true
+tauri-plugin-single-instance.workspace = true
+tauri-plugin-window-state.workspace = true
+
+# Runtime
+tokio = { workspace = true, features = ["fs"] }
+uuid.workspace = true
+anyhow.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+tracing.workspace = true
