feat: add Tauri native app routing, sheet upload, and viewer pages
Implement file-based PDF upload and viewing for the Tauri desktop app
with routing, strategy pattern adapters, and shared UI integration.
Fix biome.jsonc: remove deprecated useMaxParams rule, update JS override
path to match crate restructure, and resolve lint warnings.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -22,12 +22,9 @@
   },
   "overrides": [
     {
-      "includes": ["apps/api/crates/actions/core/js/**/*.js"],
+      "includes": ["crates/actions_core/js/**/*.js"],
       "linter": {
         "rules": {
-          "nursery": {
-            "useMaxParams": "off"
-          },
           "style": {
             "noRestrictedGlobals": "off"
           },
@@ -89,7 +86,6 @@
             "noExcessiveCognitiveComplexity": "off"
           },
           "nursery": {
-            "useMaxParams": "off",
             "noShadow": "off"
           },
           "correctness": {
