--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -19,7 +19,9 @@
     "@tauri-apps/plugin-opener": "^2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:^",
