--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -8,6 +8,7 @@ on:
       - develop
     paths:
       - 'apps/api/**'
+      - 'crates/**'
       - 'Cargo.toml'
       - 'Cargo.lock'
       - '.github/workflows/backend-ci.yml'
@@ -18,6 +19,7 @@ on:
       - develop
     paths:
       - 'apps/api/**'
+      - 'crates/**'
       - 'Cargo.toml'
       - 'Cargo.lock'
       - '.github/workflows/backend-ci.yml'
@@ -41,9 +43,6 @@ jobs:
   lint:
     name: Lint (fmt + clippy)
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: apps/api
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -56,14 +55,13 @@ jobs:
       - name: Cache Cargo
         uses: Swatinem/rust-cache@v2
         with:
-          workspaces: apps/api
           cache-on-failure: true
 
       - name: Check formatting
         run: cargo fmt --all -- --check
 
       - name: Clippy (deny warnings)
-        run: cargo clippy --workspace --all-targets --all-features -- -D warnings
+        run: cargo clippy --all-targets --all-features -- -D warnings
 
   test:
     name: Test (${{ matrix.os }})
@@ -72,9 +70,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
-    defaults:
-      run:
-        working-directory: apps/api
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -85,26 +80,22 @@ jobs:
       - name: Cache Cargo
         uses: Swatinem/rust-cache@v2
         with:
-          workspaces: apps/api
           cache-on-failure: true
 
       - name: Build (debug)
-        run: cargo build --workspace --all-features --all-targets
+        run: cargo build --all-features --all-targets
 
       - name: Test
-        run: cargo test --workspace --all-features --all-targets --no-fail-fast
+        run: cargo test --all-features --all-targets --no-fail-fast
         env:
           RUST_BACKTRACE: 1
 
       - name: Build (release)
-        run: cargo build --workspace --all-features --release
+        run: cargo build --all-features --release
 
   docs:
     name: Documentation
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: apps/api
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -115,11 +106,10 @@ jobs:
       - name: Cache Cargo
         uses: Swatinem/rust-cache@v2
         with:
-          workspaces: apps/api
           cache-on-failure: true
 
       - name: Build docs (deny warnings)
-        run: cargo doc --workspace --no-deps --all-features
+        run: cargo doc --no-deps --all-features
         env:
           RUSTDOCFLAGS: "-D warnings"
 
@@ -134,16 +124,12 @@ jobs:
         uses: EmbarkStudios/cargo-deny-action@v2
         with:
           command: check
-          manifest-path: apps/api/Cargo.toml
           arguments: --all-features
 
   # Optional: Check for unused dependencies
   udeps:
     name: Unused Dependencies
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: apps/api
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -154,21 +140,20 @@ jobs:
       - name: Cache Cargo
         uses: Swatinem/rust-cache@v2
         with:
-          workspaces: apps/api
           cache-on-failure: true
 
       - name: Install cargo-udeps
         run: cargo install cargo-udeps --locked
 
       - name: Check for unused dependencies
-        run: cargo +nightly udeps --workspace --all-targets
+        run: cargo +nightly udeps --all-targets
 
   js-tests:
     name: JavaScript Tests (D&D Helpers)
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: apps/api/crates/actions/core/js
+        working-directory: crates/actions_core/js
     steps:
       - name: Checkout
         uses: actions/checkout@v6
